--- a/index.html
+++ b/index.html
@@ -1,146 +1,289 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="AppDevMasters - We build mobile apps that solve real problems and enhance everyday life." />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="AppDevMasters - Innovative Mobile Apps for Everyday Life." />
   <title>AppDevMasters</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+    :root {
+      --main-bg: #f6faff;
+      --card-bg: #fff;
+      --primary: #1937f7;
+      --primary-gradient: linear-gradient(90deg, #1435c3 0%, #4361ee 100%);
+      --accent: #ffd60a;
+      --text-main: #1a2233;
+      --text-muted: #4b587c;
+      --radius: 1.25rem;
+      --shadow: 0 2px 24px 0 rgba(25, 55, 247, 0.05);
     }
-
+    html {
+      scroll-behavior: smooth;
+    }
     body {
       font-family: 'Inter', sans-serif;
-      background: #f9f9f9;
-      color: #333;
-      line-height: 1.6;
+      margin: 0;
+      background: var(--main-bg);
+      color: var(--text-main);
     }
-
-    header, footer {
-      background: #111;
-      color: #fff;
+    header {
+      background: var(--card-bg);
+      box-shadow: var(--shadow);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+    .navbar {
+      max-width: 980px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       padding: 1rem;
-      text-align: center;
     }
-
+    .logo {
+      font-weight: 800;
+      font-size: 1.45rem;
+      color: var(--primary);
+      letter-spacing: -1px;
+      background: var(--primary-gradient);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
     nav a {
-      color: #fff;
-      margin: 0 1rem;
+      margin-left: 1.5rem;
       text-decoration: none;
+      color: var(--text-main);
       font-weight: 600;
+      font-size: 1rem;
+      transition: color .18s;
+      position: relative;
     }
-
-    .container {
-      max-width: 960px;
+    nav a::after {
+      content: '';
+      display: block;
+      width: 0;
+      height: 2px;
+      background: var(--primary-gradient);
+      transition: width .2s;
+      border-radius: 2px;
+      margin-top: 4px;
+    }
+    nav a:hover, nav a:focus {
+      color: var(--primary);
+    }
+    nav a:hover::after, nav a:focus::after {
+      width: 100%;
+    }
+    main {
+      max-width: 980px;
       margin: auto;
-      padding: 2rem 1rem;
+      padding: 2.2rem 1.2rem 2rem 1.2rem;
     }
-
-    section {
-      margin-bottom: 3rem;
-    }
-
     .hero {
       text-align: center;
-      padding: 4rem 1rem;
+      padding: 4.5rem 1rem 3.5rem 1rem;
+      background: linear-gradient(90deg, #e7f0ff 40%, #f6faff 100%);
+      border-radius: var(--radius);
+      margin-bottom: 2.5rem;
+      box-shadow: var(--shadow);
+      animation: fadeIn 1.3s cubic-bezier(.42,0,.44,1) 1;
     }
-
     .hero h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
+      font-size: 2.7rem;
+      font-weight: 800;
+      margin-bottom: 0.85rem;
+      background: var(--primary-gradient);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      letter-spacing: -2px;
     }
-
     .hero p {
-      font-size: 1.2rem;
+      font-size: 1.25rem;
+      color: var(--text-muted);
       margin-bottom: 2rem;
+      font-weight: 500;
+      max-width: 420px;
+      margin-left: auto;
+      margin-right: auto;
     }
-
     .btn {
-      background: #0066ff;
+      background: var(--primary-gradient);
       color: #fff;
-      padding: 0.75rem 1.5rem;
+      padding: 0.9rem 2.2rem;
+      font-weight: 700;
       border: none;
-      border-radius: 8px;
-      font-weight: 600;
+      border-radius: 1.5rem;
+      font-size: 1.1rem;
+      box-shadow: 0 2px 18px 0 rgba(67,97,238,.11);
       text-decoration: none;
-      transition: background 0.3s;
+      cursor: pointer;
+      transition: background 0.22s, transform 0.14s;
+      letter-spacing: .5px;
+      display: inline-block;
     }
-
-    .btn:hover {
-      background: #0052cc;
+    .btn:hover, .btn:focus {
+      background: linear-gradient(90deg, #4361ee 10%, #1435c3 100%);
+      transform: translateY(-3px) scale(1.04);
     }
-
+    section {
+      margin-bottom: 3rem;
+      animation: fadeInUp 1.15s cubic-bezier(.42,0,.44,1) 1;
+    }
+    h2 {
+      font-size: 2.05rem;
+      font-weight: 700;
+      margin-bottom: 1.1rem;
+      background: var(--primary-gradient);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    /* Products Grid */
     .app-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
       gap: 2rem;
+      margin-top: 1rem;
     }
-
     .app-card {
-      background: #fff;
-      border-radius: 10px;
-      padding: 1rem;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+      background: var(--card-bg);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding: 2rem 1.3rem 1.5rem 1.3rem;
       text-align: center;
+      transition: transform .18s, box-shadow .18s;
+      position: relative;
+      overflow: hidden;
+      min-height: 310px;
     }
-
+    .app-card:hover, .app-card:focus-within {
+      transform: translateY(-4px) scale(1.03);
+      box-shadow: 0 6px 32px 0 rgba(67,97,238,.14);
+      z-index: 1;
+    }
     .app-card img {
-      width: 60px;
-      height: 60px;
+      width: 64px;
+      height: 64px;
+      object-fit: contain;
       margin-bottom: 1rem;
+      border-radius: 18px;
+      box-shadow: 0 2px 8px 0 rgba(25,55,247,.05);
+      background: #f2f6ff;
+      padding: 8px;
     }
-
-    h2 {
-      margin-bottom: 1rem;
+    .app-card h3 {
+      font-size: 1.25rem;
+      margin: 0.4rem 0 0.7rem 0;
+      font-weight: 700;
     }
-
+    .app-card p {
+      color: var(--text-muted);
+      font-size: 1.05rem;
+      margin-bottom: 1.2rem;
+      min-height: 50px;
+    }
+    .app-card .btn {
+      font-size: 1rem;
+      padding: 0.65rem 1.6rem;
+      margin-top: .4rem;
+    }
+    /* About */
+    #about p {
+      color: var(--text-muted);
+      font-size: 1.18rem;
+      max-width: 700px;
+      margin: auto;
+    }
+    /* Contact */
     form {
+      max-width: 420px;
+      margin: auto;
       display: flex;
       flex-direction: column;
+      gap: 1.1rem;
+      padding: 1.8rem 1.3rem;
+      background: var(--card-bg);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
     }
-
     form input, form textarea {
-      margin-bottom: 1rem;
-      padding: 0.75rem;
-      border-radius: 5px;
-      border: 1px solid #ccc;
+      padding: 0.9rem;
+      border-radius: 8px;
+      border: 1.5px solid #e1e6ef;
+      font-size: 1.08rem;
+      background: #f6faff;
+      transition: border .18s;
     }
-
+    form input:focus, form textarea:focus {
+      border: 1.5px solid #4361ee;
+      outline: none;
+    }
     form button {
-      background: #0066ff;
-      color: white;
-      padding: 0.75rem;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+      margin-top: .3rem;
     }
-
-    form button:hover {
-      background: #0052cc;
+    /* Footer */
+    footer {
+      background: var(--card-bg);
+      color: var(--text-muted);
+      text-align: center;
+      font-size: 1rem;
+      padding: 2rem 1rem 1.2rem 1rem;
+      margin-top: 4rem;
+      border-top: 1px solid #e1e6ef;
+    }
+    /* Animations */
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
+    @keyframes fadeInUp {
+      from {opacity: 0; transform: translateY(30px);}
+      to {opacity: 1; transform: none;}
+    }
+    /* Responsive */
+    @media (max-width: 680px) {
+      .navbar {
+        flex-direction: column;
+        gap: .8rem;
+      }
+      main {
+        padding: 1rem 0.3rem 2rem 0.3rem;
+      }
+      .hero {
+        padding: 2.7rem 0.6rem 2.3rem 0.6rem;
+      }
+      .app-grid {
+        gap: 1.1rem;
+      }
+      .app-card {
+        padding: 1.3rem 0.8rem 1rem 0.8rem;
+      }
+      h2 {
+        font-size: 1.3rem;
+      }
+      .hero h1 {
+        font-size: 1.6rem;
+      }
     }
   </style>
 </head>
-
 <body>
   <header>
-    <h1>AppDevMasters</h1>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#products">Our Apps</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    <div class="navbar">
+      <div class="logo">AppDevMasters</div>
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#products">Our Apps</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
   </header>
-
-  <main class="container">
+  <main>
     <section class="hero" id="home">
-      <h1>We Build Apps That Matter</h1>
-      <p>At AppDevMasters, our mission is to craft innovative, user-focused mobile apps that solve real problems and enhance everyday life.</p>
+      <h1>Apps That Improve Everyday Life</h1>
+      <p>AppDevMasters builds innovative, beautiful, high-quality mobile apps that solve real-world problems. We craft, launch, and support our own iOS and Android products—no client work, just pure product passion.</p>
       <a href="#products" class="btn">Explore Our Apps</a>
     </section>
 
@@ -148,23 +291,26 @@
       <h2>Our Apps</h2>
       <div class="app-grid">
         <div class="app-card">
-          <img src="app1-icon.png" alt="App Icon">
-          <h3>App One</h3>
-          <p>A powerful tool to boost your productivity and stay focused.</p>
+          <img src="https://img.icons8.com/color/96/000000/idea.png" alt="App Icon">
+          <h3>FocusBoost</h3>
+          <p>Stay in flow and block distractions with our minimalist focus timer. Get more done, effortlessly.</p>
           <a href="#" class="btn">Download</a>
         </div>
         <div class="app-card">
-          <img src="app2-icon.png" alt="App Icon">
-          <h3>App Two</h3>
-          <p>Organize your life and simplify your daily tasks.</p>
+          <img src="https://img.icons8.com/color/96/000000/to-do.png" alt="App Icon">
+          <h3>ListEase</h3>
+          <p>Simplify your daily planning, groceries, and life admin with our beautifully simple lists app.</p>
           <a href="#" class="btn">Download</a>
         </div>
+        <!-- Add more app cards as needed -->
       </div>
     </section>
 
     <section id="about">
       <h2>About Us</h2>
-      <p>AppDevMasters is a team of passionate creators who love building intuitive, high-quality mobile applications. Our vision is to empower users with tools that make their lives better, one app at a time.</p>
+      <p>
+        We’re a small team of makers, designers, and dreamers obsessed with quality and the user experience. At AppDevMasters, we believe in building software that feels personal, delightful, and useful. Our vision: empower people everywhere with mobile apps that really make a difference.
+      </p>
     </section>
 
     <section id="contact">
@@ -172,15 +318,13 @@
       <form action="mailto:contact@appdevmasters.com" method="post" enctype="text/plain">
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-        <button type="submit">Send</button>
+        <textarea name="message" placeholder="How can we help you?" rows="5" required></textarea>
+        <button type="submit" class="btn">Send</button>
       </form>
     </section>
   </main>
-
   <footer>
     <p>&copy; 2025 AppDevMasters. All rights reserved.</p>
   </footer>
 </body>
-
 </html>
