--- a/index.html
+++ b/index.html
@@ -292,17 +292,22 @@
       <div class="app-grid">
         <div class="app-card">
           <img src="https://img.icons8.com/color/96/000000/idea.png" alt="App Icon">
-          <h3>FocusBoost</h3>
+          <h3>MaxFocus</h3>
           <p>Stay in flow and block distractions with our minimalist focus timer. Get more done, effortlessly.</p>
           <a href="#" class="btn">Download</a>
         </div>
         <div class="app-card">
-          <img src="https://img.icons8.com/color/96/000000/to-do.png" alt="App Icon">
-          <h3>ListEase</h3>
+          <img src="https://img.icons8.com/color/96/000000/shopping-cart.png" alt="App Icon">
+          <h3>PlanToShop</h3>
           <p>Simplify your daily planning, groceries, and life admin with our beautifully simple lists app.</p>
           <a href="#" class="btn">Download</a>
         </div>
-        <!-- Add more app cards as needed -->
+        <div class="app-card">
+          <img src="https://img.icons8.com/color/96/000000/brain.png" alt="App Icon">
+          <h3>Thinkers</h3>
+          <p>Capture ideas, organize thoughts, and brainstorm brilliantly with our intuitive thinking companion.</p>
+          <a href="#" class="btn">Download</a>
+        </div>
       </div>
     </section>
 
