--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
   <main>
     <section class="hero" id="home">
       <h1>Apps That Improve Everyday Life</h1>
-      <p>AppDevMasters builds innovative, beautiful, high-quality mobile apps that solve real-world problems. We craft, launch, and support our own iOS and Android products—no client work, just pure product passion.</p>
+      <p>AppDevMasters builds innovative, beautiful, high-quality mobile apps that solve real-world problems. We craft, launch, and support our own products — no client work, just pure product passion.</p>
       <a href="#products" class="btn">Explore Our Apps</a>
     </section>
 
