--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
     <section id="contact">
       <h2>Contact Us</h2>
-      <form action="mailto:contact@appdevmasters.com" method="post" enctype="text/plain">
+      <form action="mailto:info@appdevmasters.com" method="post" enctype="text/plain">
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="Your Email" required />
         <textarea name="message" placeholder="How can we help you?" rows="5" required></textarea>
